[package]
name = "rxdc"
version = "0.1.1"
edition = "2024"
description = "Combines all human interpretable object notation files (yml/toml/json) from the specified directory into a single .(ts/js/lua/luau/json) file."
repository = "https://github.com/s5wn/rxts-text-parser"
homepage = "https://github.com/s5wn/rxts-text-parser"
license = "MIT"
[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
glob = "0.3.3"
json2lua = "0.1.3"
regex = "1.12.2"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
[dependencies.clap]
version = "4.5.49"
features = ["derive"]
